Updating to Beta4.1_latestWebGateway @ 8227
  ------------------------------------------------------------------------
  r8227 | cneves-x | 2010-10-05 19:25:41 +0100 (Tue, 05 Oct 2010) | 1 line

  Fixing webgateway.tempfile handling of filenames with slashes
  ------------------------------------------------------------------------
  r8155 | cneves-x | 2010-09-30 00:14:31 +0100 (Thu, 30 Sep 2010) | 1 line

  Removing doRollover on django's filelog, as it was leaving existing log file handles to the log pointing nowhere.
  ------------------------------------------------------------------------
  r8130 | cneves-x | 2010-09-27 16:03:59 +0100 (Mon, 27 Sep 2010) | 1 line

  Support for images with inverted Z/T axis to be reverted in the gateway wrapper and javascript viewer.
  ------------------------------------------------------------------------
  r8103 | cneves-x | 2010-09-20 17:37:29 +0100 (Mon, 20 Sep 2010) | 1 line

  Merging trunk -c8041 'Added an IScale implementation using Java Image Scaling'
  ------------------------------------------------------------------------

--- a/components/tools/OmeroWeb/omeroweb/webgateway/templates/webgateway/omero_image.html
+++ b/components/tools/OmeroWeb/omeroweb/webgateway/templates/webgateway/omero_image.html
@@ -155,6 +155,7 @@
     /* Sync inputs with initial values */
 
     $('#wblitz-rmodel').attr('checked', !viewport.isGreyModel());
+    $('#wblitz-invaxis').attr('checked', viewport.loadedImg.rdefs.invertAxis);
     //$('#rd-wblitz-rmodel').attr('checked', !viewport.isGreyModel());
 
     var q = viewport.getQuality();
@@ -179,8 +180,6 @@
     }
 
     /* Image details */
-    $('#wblitz-t-count').html(viewport.getTCount());
-    $('#wblitz-z-count').html(viewport.getZCount());
     var tmp = getMetadata();
     $('#wblitz-image-name').html(tmp.imageName);
     $('#wblitz-image-description-content').html(tmp.imageDescription.replace(/\n/g, '<br />'));
@@ -315,6 +314,7 @@
       }
       $('#wblitz-lp-enable').attr('disabled', p != 'normal');
       //$('#wblitz-channels-box button').attr('disabled', p == 'split');
+        $('[name="wblitz-proj"][value=intmax]').attr('disabled', viewport.loadedImg.rdefs.invertAxis);
     }
     
     //nosync || syncRDCW();
@@ -398,6 +398,8 @@
   var imageChange = function (ev, obj) {
     $('#wblitz-t-curr').html(viewport.getTPos());
     $('#wblitz-z-curr').html(viewport.getZPos());
+    $('#wblitz-t-count').html(viewport.getTCount());
+    $('#wblitz-z-count').html(viewport.getZCount());
     if (viewport.hasLinePlot() || $('#wblitz-lp-enable').attr('checked')) {
       viewport.refreshPlot();
     }
@@ -635,7 +637,7 @@
         <div id="rdef-active-area">
         <a id="rdef-postit-help" href="#" onclick="return showChannelWindowHelp();"><img src="/appmedia/webgateway/img/question.png" alt="Show help on channel window ranges" /></a>
         <label for="rd-wblitz-rmodel">Render as Color</label>
-        <input id="rd-wblitz-rmodel" type="checkbox" onchange="return rdChanSelHelper(this); viewport.setModel(this.checked?'c':'g');" />
+        <input id="rd-wblitz-rmodel" type="checkbox" onchange="return rdChanSelHelper(this);" />
         <table cellspacing="0">
           <tr>
             <th>Visible</th>
@@ -736,6 +738,11 @@
           <div class="even row">
             <label for="wblitz-rmodel">Color</label>
             <input id="wblitz-rmodel" type="checkbox" onclick="viewport.setModel(this.checked?'c':'g');" />
+	    {% if not blitzcon.isAnonymous and image.canWrite %}
+	    <br />
+            <label for="wblitz-invaxis">Invert Z/T Axis</label>
+            <input id="wblitz-invaxis" type="checkbox" onchange="viewport.setInvertedAxis(this.checked);" />
+	    {% endif %}
             <br />
           </div>
             <h1>Current Image</h1>
